restyling the code

--- a/index.html
+++ b/index.html
@@ -1,52 +1,75 @@
 <!DOCTYPE html>
-    <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-        <!--=============== REMIXICONS ===============-->
-        <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
+    <!--=============== REMIXICONS ===============-->
+    <link
+      href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css"
+      rel="stylesheet"
+    />
 
-        <!--=============== CSS ===============-->
-        <link rel="stylesheet" href="assets/css/styles.css">
+    <!--=============== CSS ===============-->
+    <link rel="stylesheet" href="assets/css/styles.css" />
 
-        <title>Muhammad Meluk - Scaned</title>
-    </head>
-    <body>
-        <div class="container">
-            <div class="card">
-                <div class="card__border">
-                    <img src="assets/img/profile-img.png" alt="card image" class="card__img">
-                </div>
-
-                <h3 class="card__name">Muhammad Meluk</h3>
-                <span class="card__profession">Web Developer</span>
-
-                <!-- Card social -->
-                <ul class="social__info">
-                    <a href="tel:01022723804" target="_blank" class="card__social-link">
-                        <i class="ri-phone-line"></i>
-                    </a>
-                    <a href="https://wa.me/201022723804" target="_blank" class="card__social-link">
-                        <i class="ri-whatsapp-line"></i>
-                    </a>
-
-                    <a href="https://m.me/muhammad.salah.meluk" target="_blank" class="card__social-link">
-                        <i class="ri-messenger-line"></i>
-                    </a>
-
-                    <a href="mailto:mohammedmelok001@gmail.com" target="_blank" class="card__social-link">
-                        <i class="ri-mail-line"></i>
-                    </a>
-
-                    <a href="https://github.com/msmelok" target="_blank" class="card__social-link">
-                        <i class="ri-github-line"></i>
-                    </a>
-                </ul>
-            </div>
+    <title>Muhammad Meluk - Scaned</title>
+  </head>
+  <body>
+    <div class="container">
+      <div class="card">
+        <div class="card__border">
+          <img
+            src="assets/img/profile-img.png"
+            alt="card image"
+            class="card__img"
+          />
         </div>
 
-        <!--=============== MAIN JS ===============-->
-        <script src="assets/js/main.js"></script>
-    </body>
+        <h3 class="card__name">Muhammad Meluk</h3>
+        <span class="card__profession">Web Developer</span>
+
+        <!-- Card social -->
+        <ul class="social__info">
+          <a href="tel:01022723804" target="_blank" class="card__social-link">
+            <i class="ri-phone-line"></i>
+          </a>
+          <a
+            href="https://wa.me/201022723804"
+            target="_blank"
+            class="card__social-link"
+          >
+            <i class="ri-whatsapp-line"></i>
+          </a>
+
+          <a
+            href="https://m.me/muhammad.salah.meluk"
+            target="_blank"
+            class="card__social-link"
+          >
+            <i class="ri-messenger-line"></i>
+          </a>
+
+          <a
+            href="mailto:mohammedmelok001@gmail.com"
+            target="_blank"
+            class="card__social-link"
+          >
+            <i class="ri-mail-line"></i>
+          </a>
+
+          <a
+            href="https://github.com/msmelok"
+            target="_blank"
+            class="card__social-link"
+          >
+            <i class="ri-github-line"></i>
+          </a>
+        </ul>
+      </div>
+    </div>
+
+    <!--=============== MAIN JS ===============-->
+    <script src="assets/js/main.js"></script>
+  </body>
 </html>
